# barebones-backend

./: Dockerfile  Makefile  README.md  barebones_controller.py  barebones_routes.py  barebones_server.py  docker-compose.yml  pyproject.toml  routes.py  test_barebones_server.py
app/: barebones_routes.py  barebones_server.py
warmup/: cart.py  test_cart.py
