[tool.poetry]
name = "barebones-backend"
version = "0.1.0"
description = "Barebones Backend Server using Python 3 Standard library"
authors = ["Abhishek Juneja <abhishek.juneja145@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.14.0"
bpython = "^0.19"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

